# ets-rtc-group7

./: README.md
nnawaw/: Cargo.toml
nnawaw/backupjgnlupa/: mainbackup figure.txt
nnawaw/src/: main.rs
rust-nn-qt/backupjgnlupa/: frontanyarr.txt  frontend.txt  main.txt  mainanyarmaning.txt
rust-nn-qt/csv/: airquality_monitoring.csv  airquality_synthetic.csv  pollution_dummy_dataset8k.csv
rust-nn-qt/src/: frontend.rs  frontend_new.rs  main.rs
