[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"
csv = "1.3"
plotters = "0.3"
indicatif = "0.17"
eframe = "0.24.1"
egui = "0.24.1"
egui_plot = "0.24.1"
winapi = { version = "0.3.9", features = ["winuser"] }